gcd.output
Grammar

    0 $accept: program $end

    1 program: INT MAIN LP RP BEGINN declarations statements END

    2 declarations: INT varlist SEMI

    3 varlist: ID COMMA varlist
    4        | ID

    5 statements: if_stmt for_stmt

    6 if_stmt: IF LP expr RELOP expr RP assign_stmt

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    8 assign_stmt: ID ASSIGN expr SEMI

    9 expr: ID
   10     | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 1 2
    MAIN (259) 1
    BEGINN (260) 1 7
    END (261) 1 7
    IF (262) 6
    FOR (263) 7
    LP (264) 1 6 7
    RP (265) 1 6 7
    COMMA (266) 3
    SEMI (267) 2 7 8
    ASSIGN (268) 7 8
    INC (269) 7
    ID (270) 3 4 7 8 9
    NUM (271) 7 10
    RELOP (272) 6 7


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    program (19)
        on left: 1
        on right: 0
    declarations (20)
        on left: 2
        on right: 1
    varlist (21)
        on left: 3 4
        on right: 2 3
    statements (22)
        on left: 5
        on right: 1
    if_stmt (23)
        on left: 6
        on right: 5
    for_stmt (24)
        on left: 7
        on right: 5
    assign_stmt (25)
        on left: 8
        on right: 6 7
    expr (26)
        on left: 9 10
        on right: 6 7 8


State 0

    0 $accept: • program $end

    INT  shift, and go to state 1

    program  go to state 2


State 1

    1 program: INT • MAIN LP RP BEGINN declarations statements END

    MAIN  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: INT MAIN • LP RP BEGINN declarations statements END

    LP  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: INT MAIN LP • RP BEGINN declarations statements END

    RP  shift, and go to state 6


State 6

    1 program: INT MAIN LP RP • BEGINN declarations statements END

    BEGINN  shift, and go to state 7


State 7

    1 program: INT MAIN LP RP BEGINN • declarations statements END

    INT  shift, and go to state 8

    declarations  go to state 9


State 8

    2 declarations: INT • varlist SEMI

    ID  shift, and go to state 10

    varlist  go to state 11


State 9

    1 program: INT MAIN LP RP BEGINN declarations • statements END

    IF  shift, and go to state 12

    statements  go to state 13
    if_stmt     go to state 14


State 10

    3 varlist: ID • COMMA varlist
    4        | ID •

    COMMA  shift, and go to state 15

    $default  reduce using rule 4 (varlist)


State 11

    2 declarations: INT varlist • SEMI

    SEMI  shift, and go to state 16


State 12

    6 if_stmt: IF • LP expr RELOP expr RP assign_stmt

    LP  shift, and go to state 17


State 13

    1 program: INT MAIN LP RP BEGINN declarations statements • END

    END  shift, and go to state 18


State 14

    5 statements: if_stmt • for_stmt

    FOR  shift, and go to state 19

    for_stmt  go to state 20


State 15

    3 varlist: ID COMMA • varlist

    ID  shift, and go to state 10

    varlist  go to state 21


State 16

    2 declarations: INT varlist SEMI •

    $default  reduce using rule 2 (declarations)


State 17

    6 if_stmt: IF LP • expr RELOP expr RP assign_stmt

    ID   shift, and go to state 22
    NUM  shift, and go to state 23

    expr  go to state 24


State 18

    1 program: INT MAIN LP RP BEGINN declarations statements END •

    $default  reduce using rule 1 (program)


State 19

    7 for_stmt: FOR • LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    LP  shift, and go to state 25


State 20

    5 statements: if_stmt for_stmt •

    $default  reduce using rule 5 (statements)


State 21

    3 varlist: ID COMMA varlist •

    $default  reduce using rule 3 (varlist)


State 22

    9 expr: ID •

    $default  reduce using rule 9 (expr)


State 23

   10 expr: NUM •

    $default  reduce using rule 10 (expr)


State 24

    6 if_stmt: IF LP expr • RELOP expr RP assign_stmt

    RELOP  shift, and go to state 26


State 25

    7 for_stmt: FOR LP • ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    ID  shift, and go to state 27


State 26

    6 if_stmt: IF LP expr RELOP • expr RP assign_stmt

    ID   shift, and go to state 22
    NUM  shift, and go to state 23

    expr  go to state 28


State 27

    7 for_stmt: FOR LP ID • ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    ASSIGN  shift, and go to state 29


State 28

    6 if_stmt: IF LP expr RELOP expr • RP assign_stmt

    RP  shift, and go to state 30


State 29

    7 for_stmt: FOR LP ID ASSIGN • NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    NUM  shift, and go to state 31


State 30

    6 if_stmt: IF LP expr RELOP expr RP • assign_stmt

    ID  shift, and go to state 32

    assign_stmt  go to state 33


State 31

    7 for_stmt: FOR LP ID ASSIGN NUM • SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    SEMI  shift, and go to state 34


State 32

    8 assign_stmt: ID • ASSIGN expr SEMI

    ASSIGN  shift, and go to state 35


State 33

    6 if_stmt: IF LP expr RELOP expr RP assign_stmt •

    $default  reduce using rule 6 (if_stmt)


State 34

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI • expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    ID   shift, and go to state 22
    NUM  shift, and go to state 23

    expr  go to state 36


State 35

    8 assign_stmt: ID ASSIGN • expr SEMI

    ID   shift, and go to state 22
    NUM  shift, and go to state 23

    expr  go to state 37


State 36

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr • RELOP expr SEMI INC ID RP BEGINN assign_stmt END

    RELOP  shift, and go to state 38


State 37

    8 assign_stmt: ID ASSIGN expr • SEMI

    SEMI  shift, and go to state 39


State 38

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP • expr SEMI INC ID RP BEGINN assign_stmt END

    ID   shift, and go to state 22
    NUM  shift, and go to state 23

    expr  go to state 40


State 39

    8 assign_stmt: ID ASSIGN expr SEMI •

    $default  reduce using rule 8 (assign_stmt)


State 40

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr • SEMI INC ID RP BEGINN assign_stmt END

    SEMI  shift, and go to state 41


State 41

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI • INC ID RP BEGINN assign_stmt END

    INC  shift, and go to state 42


State 42

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC • ID RP BEGINN assign_stmt END

    ID  shift, and go to state 43


State 43

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID • RP BEGINN assign_stmt END

    RP  shift, and go to state 44


State 44

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP • BEGINN assign_stmt END

    BEGINN  shift, and go to state 45


State 45

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN • assign_stmt END

    ID  shift, and go to state 32

    assign_stmt  go to state 46


State 46

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt • END

    END  shift, and go to state 47


State 47

    7 for_stmt: FOR LP ID ASSIGN NUM SEMI expr RELOP expr SEMI INC ID RP BEGINN assign_stmt END •

    $default  reduce using rule 7 (for_stmt)
